# backend/src/routes/proofs.ts
@@ -4,7 +4,8 @@ import { proofController } from "../controllers/proofs";
 
 const proofsRouter = Router();
 const { verifyToken, verifyDoctor } = authMiddleware;
-const { requestProof, manageRequest, getProof, createProof } = proofController;
+const { requestProof, manageRequest, getProof, createProof, deleteProof } =
+  proofController;
 
 proofsRouter.post("/requests/:doctorId", verifyToken, requestProof);
 
@@ -13,5 +14,7 @@ proofsRouter.put("/requests/:proofId", verifyDoctor, manageRequest);
 proofsRouter.get("/:proofId", verifyToken, getProof);
 
 proofsRouter.post("/", verifyDoctor, createProof);
+
+proofsRouter.delete("/:proofId", verifyDoctor, deleteProof);
 
 export default proofsRouter;
